add default values for Long and ListOfStrings